test/fixtures/public/fail/semantic/varNotInit.jmm
/*  REASON:
    Variable "j" is undefined.
*/

class VarNotInit {
    public static void main(String[] a) { 
        int i;
        int j;
        int k;
        k = 2;
        i = j+k;
    }
}
